--- a/public/styles/layouts/_header.scss
+++ b/public/styles/layouts/_header.scss
@@ -6,6 +6,7 @@ header {
   background: white;
   display: flex;
   justify-content: space-between;
+  flex-flow: row wrap;
   padding: 0 1em;
   border-bottom: 1px solid black;
   margin-bottom: 2em;
