--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -28,12 +28,13 @@
   border: none;
   box-sizing: border-box;
   width: calc(100% - 60px);
-  border-radius: 5px;
   font-family: Arial, Helvetica, sans-serif;
+}
+.modal form label {
+  text-align: center;
 }
 .modal .close-modal {
   background: none;
-  border-radius: 5px;
   border: none;
   background: #f45050;
   color: #fff;
@@ -43,13 +44,12 @@
   transition: 0.3s;
 }
 .modal .close-modal:hover {
-  color: #f45050;
-  background: #fff;
+  color: #fff;
+  background: #f22c2c;
 }
 .modal button:last-child {
   margin-top: 1em;
   padding: 0.2em 0.6em;
-  border-radius: 5px;
   border: none;
   background: #57a773;
   color: #fff;
@@ -58,21 +58,17 @@
   transition: 0.3s;
 }
 .modal button:last-child:hover {
-  color: #73c3af;
-  background: #fff;
+  color: #fff;
+  background: #4d9366;
 }
 
-.note-section {
-  display: flex;
-  justify-content: center;
-  flex-flow: row wrap;
-}
 .note-section .note-item {
-  list-style: none;
+  margin: 0;
   padding: 0;
+  list-style: none;
+  padding: 0 2em;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 .note-section .note-item .single-note-heading {
   margin-right: 2em;
@@ -82,30 +78,29 @@
 }
 @media screen and (min-width: 641px) {
   .note-section .note-item {
-    flex-flow: row wrap;
+    width: 100%;
   }
 }
 .note-section .note-item .single-note {
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
-  border-radius: 5px;
-  margin: 1em;
+  margin: 0 0 1em 0;
   padding: 1em;
   position: relative;
+  transition: 0.3s;
 }
-@media screen and (min-width: 641px) {
-  .note-section .note-item .single-note {
-    max-width: fit-content;
-  }
+.note-section .note-item .single-note:hover {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+}
+.note-section .note-item .single-note .single-note-heading span {
+  margin: 0.2em 1em 0.2em 0.2em;
 }
 .note-section .note-item .single-note .note-delete {
   position: absolute;
   top: 0;
   right: 0;
   background-color: #f1efee;
-  border-radius: 5px;
   padding: 0.2em;
   margin: 0.2em 0.2em 0.2em 1em;
   color: #262730;
@@ -123,8 +118,8 @@
   padding: 0;
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
-  gap: 1em;
+  justify-content: flex-start;
+  gap: 0.2em;
 }
 .note-section .note-item .note-tags ul li {
   display: flex;
@@ -132,32 +127,26 @@
   padding: 0.2em 0.6em;
   background: #f1efee;
   color: #262730;
-  border: 1px solid black;
-  border-radius: 5px;
   border: none;
 }
 .note-section .note-item a {
   text-decoration: none;
   text-align: center;
   color: #262730;
-  border: 1px solid black;
-  border-radius: 5px;
   border: none;
 }
 .note-section .note-item .goto-note {
   color: #262730;
   width: fit-content;
   display: block;
-  margin: 0 auto;
+  margin-right: auto;
   background: #337ea9;
   border: none;
   color: white;
   font-weight: bold;
-  border-radius: 5px;
   padding: 0.2em 0.6em;
   cursor: pointer;
   transition: 0.3s;
-  margin-top: 1em;
 }
 .note-section .note-item .goto-note:hover {
   background: #286487;
@@ -165,38 +154,6 @@
 .note-section .note-item .archive-week {
   display: flex;
   justify-content: flex-start;
-}
-
-.filter-tags {
-  margin: 1em;
-}
-.filter-tags ul {
-  list-style: none;
-  padding: 0;
-  display: flex;
-}
-.filter-tags ul li {
-  margin: 0 1em;
-}
-.filter-tags ul li label {
-  padding: 0.4em 1em;
-  border: 1px solid #262730;
-  cursor: pointer;
-  border-radius: 5px;
-  color: #262730;
-  transition: 0.3s;
-}
-.filter-tags ul li label:hover {
-  background-color: #262730;
-  color: #f1efee;
-}
-.filter-tags ul li input {
-  display: none;
-}
-
-.active {
-  background: black;
-  color: white;
 }
 
 .select-view {
@@ -243,7 +200,6 @@
   display: inline-block;
   transition: 0.3s;
   padding: 0.1em 0.6em;
-  border-radius: 5px;
 }
 .select-view ul .select-view-link a:hover {
   background-color: #e9e8e8;
@@ -268,7 +224,6 @@
   display: inline-block;
   padding: 0.4em;
   transition: 0.3s;
-  border-radius: 5px;
 }
 .select-view .select-view-week li a:hover {
   background-color: #e9e8e8;
@@ -277,7 +232,7 @@
 .detail-note {
   display: flex;
   flex-direction: column;
-  padding: 1em 2em;
+  padding: 0 2em;
 }
 .detail-note h3 {
   text-align: center;
@@ -286,7 +241,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 1em;
+  flex-flow: row wrap;
+  margin-bottom: 0.4em;
+  padding-bottom: 1em;
+  border-bottom: 1px solid #262730;
 }
 .detail-note .detail-note-options div:first-child a {
   text-decoration: none;
@@ -298,7 +256,6 @@
   border: none;
   color: white;
   font-weight: bold;
-  border-radius: 5px;
   padding: 0.2em 0.6em;
   cursor: pointer;
   transition: 0.3s;
@@ -309,7 +266,6 @@
 .detail-note .detail-note-options div a,
 .detail-note .detail-note-options div button {
   background-color: #f1efee;
-  border-radius: 5px;
   padding: 0.2em;
   cursor: pointer;
   color: #262730;
@@ -317,8 +273,6 @@
   text-decoration: none;
   text-align: center;
   color: #262730;
-  border: 1px solid black;
-  border-radius: 5px;
   border: none;
 }
 .detail-note .detail-note-options div a:hover,
@@ -333,6 +287,7 @@
 }
 .detail-note .detail-note-tags {
   margin: 1em 0 0 0;
+  margin-right: auto;
 }
 .detail-note .detail-note-tags ul {
   list-style: none;
@@ -348,29 +303,45 @@
   padding: 0.2em 0.6em;
   background: #f1efee;
   color: #262730;
-  border: 1px solid black;
-  border-radius: 5px;
   border: none;
 }
 
 .filter-tags {
+  margin: 1em;
   border: none;
-  border-bottom: 1px solid #e5e5e5;
 }
 .filter-tags legend {
   padding: 1em;
   font-weight: bold;
 }
+.filter-tags ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+}
 .filter-tags ul li {
   display: flex;
   flex-flow: row wrap;
-  gap: 1em;
+  gap: 0.2em;
 }
 .filter-tags ul li label {
-  background: none;
-  border: 1px solid #262730;
   padding: 0.2em 1em;
+  border: 1px solid #262730;
+  cursor: pointer;
   color: #262730;
+  transition: 0.3s;
+}
+.filter-tags ul li label:hover {
+  background-color: #262730;
+  color: #f1efee;
+}
+.filter-tags ul li input {
+  display: none;
+}
+
+.active {
+  background: black;
+  color: white;
 }
 
 /*!
@@ -894,6 +865,7 @@ header {
   background: white;
   display: flex;
   justify-content: space-between;
+  flex-flow: row wrap;
   padding: 0 1em;
   border-bottom: 1px solid black;
   margin-bottom: 2em;
@@ -959,7 +931,7 @@ footer .view-header button:hover {
   flex-direction: column;
 }
 .archive .archive-week {
-  padding: 0 1em;
+  padding: 0 2em;
 }
 .archive .archive-week h2 {
   border-bottom: 1px solid #f2f2f2;
@@ -973,7 +945,6 @@ footer .view-header button:hover {
 }
 .index .index-container {
   border: 1px solid #262730;
-  border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1000,7 +971,6 @@ footer .view-header button:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 5px;
   font-weight: bold;
   transition: 0.5s;
 }
@@ -1020,8 +990,16 @@ footer .view-header button:hover {
   color: #262730;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 .hidden {
