--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -88,7 +88,7 @@
   margin: 0 0 1em 0;
   padding: 1em;
   position: relative;
-  transition: 0.3s;
+  transition: box-shadow 0.3s;
 }
 .note-section .note-item .single-note:hover {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
@@ -104,7 +104,7 @@
   padding: 0.2em;
   margin: 0.2em 0.2em 0.2em 1em;
   color: #262730;
-  transition: 0.3s;
+  transition: box-shadow 0.3s;
 }
 .note-section .note-item .single-note .note-delete:hover {
   background-color: #262730;
@@ -146,7 +146,7 @@
   font-weight: bold;
   padding: 0.2em 0.6em;
   cursor: pointer;
-  transition: 0.3s;
+  transition: box-shadow 0.3s;
 }
 .note-section .note-item .goto-note:hover {
   background: #286487;
@@ -198,7 +198,7 @@
   color: #37352f;
   font-weight: bold;
   display: inline-block;
-  transition: 0.3s;
+  transition: background-color 0.3s;
   padding: 0.1em 0.6em;
 }
 .select-view ul .select-view-link a:hover {
@@ -223,7 +223,7 @@
   font-weight: bold;
   display: inline-block;
   padding: 0.4em;
-  transition: 0.3s;
+  transition: background-color 0.3s;
 }
 .select-view .select-view-week li a:hover {
   background-color: #e9e8e8;
@@ -252,16 +252,16 @@
   width: fit-content;
   display: block;
   margin: 0 auto;
-  background: #337ea9;
+  background-color: #337ea9;
   border: none;
   color: white;
   font-weight: bold;
   padding: 0.2em 0.6em;
   cursor: pointer;
-  transition: 0.3s;
+  transition: background-color 0.3s;
 }
 .detail-note .detail-note-options div:first-child a:hover {
-  background: #286487;
+  background-color: #286487;
 }
 .detail-note .detail-note-options div a,
 .detail-note .detail-note-options div button {
@@ -329,7 +329,7 @@
   border: 1px solid #262730;
   cursor: pointer;
   color: #262730;
-  transition: 0.3s;
+  transition: background-color 0.3s;
 }
 .filter-tags ul li label:hover {
   background-color: #262730;
