--- a/public/styles/components/_tag.scss
+++ b/public/styles/components/_tag.scss
@@ -21,7 +21,7 @@
 
         color: #262730;
 
-        transition: 0.3s;
+        transition: background-color 0.3s;
         &:hover {
           background-color: #262730;
           color: #f1efee;
